Improve compiler errors for projection member type mismatches.