@@ -12,6 +12,8 @@ import cool.klass.model.converter.compiler.state.AntlrClass;
 import cool.klass.model.converter.compiler.state.AntlrClassifier;
 import cool.klass.model.converter.compiler.state.property.AntlrAssociationEnd;
 import cool.klass.model.converter.compiler.state.property.AntlrAssociationEndSignature;
+import cool.klass.model.converter.compiler.state.property.AntlrDataTypeProperty;
+import cool.klass.model.converter.compiler.state.property.AntlrEnumerationProperty;
 import cool.klass.model.converter.compiler.state.property.AntlrReferenceProperty;
 import cool.klass.model.meta.domain.projection.AbstractProjectionElement.ProjectionChildBuilder;
 import cool.klass.model.meta.domain.projection.AbstractProjectionParent;
@@ -133,10 +135,11 @@ public class AntlrProjectionReferenceProperty
     {
         super.reportErrors(compilerErrorHolder);
 
-        if (this.antlrProjectionParent.getClassifier() == AntlrClass.NOT_FOUND
-                || this.antlrProjectionParent.getClassifier() == AntlrClass.AMBIGUOUS
-                || this.antlrProjectionParent.getClassifier() == AntlrClassifier.AMBIGUOUS
-                || this.antlrProjectionParent.getClassifier() == AntlrClassifier.NOT_FOUND)
+        AntlrClassifier parentClassifier = this.antlrProjectionParent.getClassifier();
+        if (parentClassifier == AntlrClass.NOT_FOUND
+                || parentClassifier == AntlrClass.AMBIGUOUS
+                || parentClassifier == AntlrClassifier.AMBIGUOUS
+                || parentClassifier == AntlrClassifier.NOT_FOUND)
         {
             return;
         }
@@ -145,8 +148,22 @@ public class AntlrProjectionReferenceProperty
                 || this.referenceProperty == AntlrAssociationEnd.NOT_FOUND
                 || this.referenceProperty == AntlrAssociationEndSignature.NOT_FOUND)
         {
-            String message = String.format("Not found: '%s'.", this);
-            compilerErrorHolder.add("ERR_PRP_NFD", message, this);
+            AntlrDataTypeProperty<?> dataTypeProperty = parentClassifier.getDataTypePropertyByName(this.getName());
+
+            if (dataTypeProperty == AntlrEnumerationProperty.NOT_FOUND)
+            {
+                String message = String.format("Cannot find member '%s.%s'.", parentClassifier.getName(), this.getName());
+                compilerErrorHolder.add("ERR_PRP_NFD", message, this);
+            }
+            else
+            {
+                String message = "Nested projection nodes require a reference property, but found a data type property '%s.%s' with type '%s'.".formatted(
+                        parentClassifier.getName(),
+                        this.getName(),
+                        dataTypeProperty.getTypeName());
+                compilerErrorHolder.add("ERR_PRP_TYP", message, this);
+            }
+
             return;
         }
 
